--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <h1>WHIPLASH</h1>
     <h2>2014</h2>
     <h2>Directed by Damien Chazelle</h2>
+    <nav>
+        <li><a href="index.html">Movie</a></li>
+        <li><a href="poster.html">Poster</a></li>
+    </nav>
     <p class="beautiful-element"> Whiplash is a 2014 American psychological drama film written and directed by Damien Chazelle, and starring Miles Teller, J.K. Simmons, Paul Reiser and Melissa Benoist. "Whiplash" is cinematic adrenalin. In an era when so many films feel more refined by focus groups or marketing managers, it is a deeply personal and vibrantly alive drama. Damien Chazelle has taken a relatively staid subject like the relationship between a music student and his teacher and turned it into a thriller built on a brilliant undercurrent of social commentary about what it takes to make it in an increasingly competitive and cutthroat world. How far are you willing to push yourself to succeed? How far are you willing to push someone else to force them on the path to success? Carried by two electric performances, the tightest editing in a film this year and a daring screenplay that writes itself into a corner and then somehow finds an unexpected way out, "Whiplash" is as breathless as a drum solo, rising and falling just as the hopes and dreams of its protagonist climb and crash.</p>
     <div class="main">
         <img src="assets/IMG_6953.JPG" alt="">
