--- a/poster.html
+++ b/poster.html
@@ -11,5 +11,10 @@
         <li><a href="index.html">Movie</a></li>
         <li><a href="poster.html">Poster</a></li>
     </nav>
+<div class="wrapper">
+    <div class="background"></div>
+    <div class="green box"></div>
+    <div class="gold box"></div>
+</div >
 </body>
 </html>
