--- a/poster.html
+++ b/poster.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+    <link rel="stylesheet" href="style/poster.css">
+    <title>WHIPLASH</title>
 </head>
 <body>
+    <h1>WHIPLASH</h1>
+    <h2>2014</h2>
     <nav>
         <li><a href="index.html">Movie</a></li>
         <li><a href="poster.html">Poster</a></li>
