--- a/poster.html
+++ b/poster.html
@@ -16,9 +16,9 @@
         <li><a href="poster.html">Poster</a></li>
     </nav>
 <div class="wrapper">
-    <div class="background"></div>
-    <div class="green box"></div>
-    <div class="gold box"></div>
+    <div class="background">backgound</div>
+    <div class="green box">green box</div>
+    <div class="gold box">gold box</div>
 </div >
 </body>
 </html>
