--- a/poster.html
+++ b/poster.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-    <link rel="stylesheet" href="style/poster.css">
+    <link rel="stylesheet" href="styles/poster.css">
     <title>WHIPLASH</title>
 </head>
 <body>
