--- a/poster.html
+++ b/poster.html
@@ -16,9 +16,9 @@
         <li><a href="poster.html">Poster</a></li>
     </nav>
 <div class="wrapper">
-    <div class="background">backgound</div>
-    <div class="greenbox">green box</div>
-    <div class="goldbox">gold box</div>
+    <div class="background"></div>
+    <div class="greenbox"></div>
+    <div class="goldbox"></div>
 </div >
 </body>
 </html>
