--- a/poster.html
+++ b/poster.html
@@ -20,5 +20,8 @@
     <div class="greenbox"></div>
     <div class="goldbox"></div>
 </div >
+<div class="main">
+    <img src="assets/Drum-Sticks-PNG-Pic.png" alt="">
+</div>
 </body>
 </html>
