--- a/poster.html
+++ b/poster.html
@@ -19,9 +19,9 @@
     <div class="background"></div>
     <div class="greenbox"></div>
     <div class="goldbox"></div>
+    <div class="stick">
+        <img src="assets/Drum-Sticks-PNG-Pic.png" alt="">
+    </div>
 </div >
-<div class="main">
-    <img src="assets/Drum-Sticks-PNG-Pic.png" alt="">
-</div>
 </body>
 </html>
