--- a/poster.html
+++ b/poster.html
@@ -22,6 +22,9 @@
     <div class="stick">
         <img src="assets/Drum-Sticks-PNG-Pic.png" alt="">
     </div>
+    <div class="man">
+        <img src="assets/miles.jpg" alt="">
+    </div>
 </div >
 </body>
 </html>
