--- a/poster.html
+++ b/poster.html
@@ -23,7 +23,7 @@
         <img src="assets/Drum-Sticks-PNG-Pic.png" alt="">
     </div>
     <div class="man">
-        <img src="assets/miles.jpg" alt="">
+        <img src="assets/a-silhouette-of-a-man-20.png" alt="">
     </div>
 </div >
 </body>
