--- a/poster.html
+++ b/poster.html
@@ -18,6 +18,7 @@
 <div class="wrapper">
     <div class="background"></div>
     <div class="greenbox"></div>
+    <div class="whiplash">WHIPLASH</div>
     <div class="stick">
         <img src="assets/Drum-Sticks-PNG-Pic.png" alt="">
     </div>
