--- a/poster.html
+++ b/poster.html
@@ -18,12 +18,14 @@
 <div class="wrapper">
     <div class="background"></div>
     <div class="greenbox"></div>
-    <div class="whiplash">WHIPLASH</div>
     <div class="stick">
         <img src="assets/Drum-Sticks-PNG-Pic.png" alt="">
     </div>
     <div class="man">
         <img src="assets/a-silhouette-of-a-man-20.png" alt="">
+    </div>
+    <div class="whiplash">
+        <h3>WHIPLASH</h3>
     </div>
 </div >
 </body>
